<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="portfolio_title">My Nanodegree Apps !</string>
    <string name="spotify_btn_label">Spotify Streamer</string>
    <string name="super_duo_btn_label">Super Duo</string>
    <string name="build_it_bigger_btn_label">Build It Bigger</string>
    <string name="xyz_reader_btn_label">XYZ Reader</string>
    <string name="capstone_project_btn_label">My Capstone Project</string>
</resources>
