<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arpitnnd.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/portfolio_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorButton"
            android:onClick="buttonOnClick"
            android:text="@string/spotify_btn_label"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorButton"
            android:onClick="buttonOnClick"
            android:text="@string/super_duo_btn_label"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorButton"
            android:onClick="buttonOnClick"
            android:text="@string/build_it_bigger_btn_label"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorButton"
            android:onClick="buttonOnClick"
            android:text="@string/xyz_reader_btn_label"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorAccent"
            android:onClick="buttonOnClick"
            android:text="@string/capstone_project_btn_label"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    </LinearLayout>

</RelativeLayout>
